kubernetes/talos/proxies/internal/internal/vault/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: vault
subsets:
  - addresses:
      - ip: 192.168.3.40
    ports:
      - port: 5000
        name: http
