kubernetes/talos/proxies/internal/internal/vault/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: vault
spec:
  ports:
  - protocol: TCP
    port: 5000
    name: http
    targetPort: 5000
