kubernetes/talos/proxies/internal/internal/vault/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: internal
  name: vault
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`vault.vandeneede.org`)
    services:
    - name: vault
      port: 5000
